force-app/main/default/objects/ViewNotification__e/ViewNotification__e.object-meta.xml
<CustomObject>
    <label>ViewNotification</label>
    <pluralLabel>ViewNotifications</pluralLabel>
</CustomObject>