force-app/main/default/objects/ViewNotification__e/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <description>join：表示中に遷移
leave：非表示に遷移</description>
    <label>イベントタイプ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>