force-app/main/default/objects/ViewNotification__e/fields/LastViewDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastViewDateTime__c</fullName>
    <label>最終表示時刻</label>
    <length>255</length>
    <type>Text</type>
</CustomField>