force-app/main/default/objects/ViewNotification__e/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <label>オブジェクト名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>