force-app/main/default/objects/ViewNotification__e/fields/SmallPhotoUrl__c.field-meta.xml
<CustomField>
    <fullName>SmallPhotoUrl__c</fullName>
    <label>SmallPhotoUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>