force-app/main/default/objects/ViewNotification__e/fields/Uuid__c.field-meta.xml
<CustomField>
    <fullName>Uuid__c</fullName>
    <label>UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>