force-app/main/default/objects/ViewNotification__e/fields/ViewDateTime__c.field-meta.xml
<CustomField>
    <fullName>ViewDateTime__c</fullName>
    <label>表示時刻</label>
    <type>DateTime</type>
</CustomField>