force-app/main/default/objects/ViewNotification__e/fields/ViewUserId__c.field-meta.xml
<CustomField>
    <fullName>ViewUserId__c</fullName>
    <label>表示中ユーザID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>