force-app/main/default/objects/ViewNotification__e/fields/ViewUserName__c.field-meta.xml
<CustomField>
    <fullName>ViewUserName__c</fullName>
    <label>表示中ユーザ氏名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>